# pyyaml-flatten-lists-tag

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
src/flatten_lists/: tag_fx.py
tests/: notes.txt  test_attrs.py  test_load.py
