[metadata]
name = flatten_lists_tag_zer0master
version = attr: flatten_lists.VERSION
author = Larry Dolinar
author_email = larry.dolinar@gmail.com
description = PyYAML support for the !FlattenLists custom tag
long_description = README.md
long_description_content_type = text/markdown
keywords =
    yaml
    tags
    custom
url = https://github.com/zer0master/pyyaml-flatten-lists-tag
project_urls =
    Bug Tracker = https://github.com/zer0master/pyyaml-flatten-lists-tag/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    PyYAML
# this seems to cause problems on install, perhaps due to pip.conf only mentioning on-prem server
#   importlib;python_version >= "3.7"

[options.packages.find]
where = src
